# Coral

./: CMakeLists.txt
Coral.Managed/: CMakeLists.txt
Coral.Native/: CMakeLists.txt
NetCore/7.0.7/: CMakeLists.txt
Testing/: CMakeLists.txt
Testing.Managed/: CMakeLists.txt
